--- a/src/index.scss
+++ b/src/index.scss
@@ -74,11 +74,12 @@ code {
 
 .filter_sort_div {
   display: flex;
+  flex-wrap: wrap
   span{
-    margin: 0px 4px 0px 24px;
+    margin: 0px 2px 0px 2px;
   }
   button {
-    padding: 4px 10px 4px 10px;
+    padding: 4px 4px 4px 8px;
     border: 1px solid #9e9e9e;
     outline: none;
   }
