--- a/src/index.scss
+++ b/src/index.scss
@@ -74,14 +74,15 @@ code {
 
 .filter_sort_div {
   display: flex;
-  flex-wrap: wrap
+  flex-wrap: wrap;
   span{
-    margin: 0px 2px 0px 2px;
+    margin: 0px 4px 0px 4px;
   }
   button {
-    padding: 4px 4px 4px 8px;
+    padding: 8px 6px 8px 6px;
     border: 1px solid #9e9e9e;
     outline: none;
+    font-size: 10px;
   }
   
   button:hover {
